[package]
name = "sed-rs"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Pegasus Heavy Industries LLC <pegasusheavyindustries@gmail.com>"]
description = "A GNU-compatible sed implementation in Rust, powered by sd's regex engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/sed-rs"
homepage = "https://github.com/pegasusheavy/sed-rs"
documentation = "https://docs.rs/sed-rs"
readme = "README.md"
categories = ["command-line-utilities", "text-processing"]
keywords = ["sed", "text", "replace", "regex", "stream-editor"]
exclude = [".github/", ".gitignore", "tests/", ".cursor/"]

[lib]
name = "sed_rs"
path = "src/lib.rs"

[[bin]]
name = "sed"
path = "src/main.rs"

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
thiserror = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
